name:                hs-misc
version:             0.1.0.0
synopsis:            Miscellaneous haskell files and mini-projects.
description:         
homepage:            https://github.com/vladfi1/hs-nn
license:             MIT
license-file:        LICENSE
author:              Vlad Firoiu
maintainer:          vladfi2@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.18

library
  exposed-modules:     Misc.Nats
                       Misc.List
                       Misc.Constraints
                       Misc.Zippable
                       Misc.Vec
                       Misc.VinylUtils
                       Misc.Utils
                       Misc.Random
                       Misc.DefaultM
                       Misc.VarArgs
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.8 && <4.9
               , singletons
               , vinyl
               , data-default
               , generics-sop
               , constraints
               , random
               , MonadRandom
               , numeric-prelude
               , transformers
               , mtl
               , free
  default-language:    Haskell2010

